[workspace.package]
name = "mira-v1-periphery"
authors = ["Mira AMM"]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "./test-harness",
    "./scripts/batch_swap_exact_in_script",
    "./scripts/batch_swap_exact_out_script"
]

[workspace.dependencies]
fuels = { version = "0.66.10", features = ["fuel-core-lib"] }
tokio = { version = "1.41.0", features = ["rt", "macros"] }